test/spec_vectors/align/ok/module_17.wat
(module (memory 0) (func (i64.store8 align=1 (i32.const 0) (i64.const 1))))