test/spec_vectors/align/fail/module_102.wat
(module (memory 0) (func (i64.store32 align=8 (i32.const 0) (i64.const 0))))